# stochastic-barnes-hut

./: CMakeLists.txt  LICENSE  README.md
cmake/: eigen.cmake  pybind11.cmake
include/: aabb.h  barnes_hut.h  barnes_hut_gpu.h  bitmask.h  brute_force_gpu.h  kernel.h  leaf_data.h  py_tree.h  py_tree_gpu.h  sampler.h  tree2d.h  tree3d.h  tree_sampler.h  tree_sampler_gpu.h  utils.h  zero_init.h
python/: example.py  utils.py
src/: sbh.cpp  sbh_gpu.cu
